--- a/chapter4-reinforcement.ipynb
+++ b/chapter4-reinforcement.ipynb
@@ -8,7 +8,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": ""
+   "source": []
   },
   {
    "metadata": {},
@@ -16,7 +16,7 @@
    "source": [
     "# 卷积流程讲解\n",
     "## stride和padding\n",
-    "<img src=\"./vis/Snipaste_2025-10-24_20-39-38.png\">"
+    "<img src=\"./notebook_image_dir/Snipaste_2025-10-24_20-39-38.png\">"
    ],
    "id": "34671f4d1c599cb8"
   },
@@ -42,7 +42,7 @@
    "source": [
     "## 画幅大小\n",
     "### 带padding\n",
-    "<img src=\"./vis/Snipaste_2025-10-26_17-40-44.png\">\n",
+    "<img src=\"./notebook_image_dir/Snipaste_2025-10-26_17-40-44.png\">\n",
     "\n",
     "$w_{out} = n_w - k_w + 1 + p_w$\n",
     "\n",
@@ -55,7 +55,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [],
    "id": "11407235f9d080fd"
   },
   {
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "source": [
     "### 带stride\n",
-    "<img src=\"./vis/Snipaste_2025-10-26_17-42-34.png\">\n",
+    "<img src=\"./notebook_image_dir/Snipaste_2025-10-26_17-42-34.png\">\n",
     "\n",
     "$ out_w =  [(n_w-k_w+p_w)/s_w+1] $\n",
     "\n",
@@ -76,13 +76,15 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [],
    "id": "742d369b5b5244a7"
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# 激活函数的添加位置",
+   "source": [
+    "# 激活函数的添加位置"
+   ],
    "id": "fab17f31747f6019"
   },
   {
@@ -90,7 +92,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [],
    "id": "1662647e420d6cd5"
   },
   {
@@ -98,7 +100,7 @@
    "cell_type": "markdown",
    "source": [
     "# 模型参数量计算\n",
-    "<img src=\"./vis/Snipaste_2025-10-24_20-56-11.png\">"
+    "<img src=\"./notebook_image_dir/Snipaste_2025-10-24_20-56-11.png\">"
    ],
    "id": "f770731022d45084"
   },
@@ -116,7 +118,9 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# 钩子函数register_full_backward_hook实现Grad-CAM（绘图、包含图像反标准化）",
+   "source": [
+    "# 钩子函数register_full_backward_hook实现Grad-CAM（绘图、包含图像反标准化）"
+   ],
    "id": "ed6ad22494653847"
   },
   {
@@ -133,7 +137,9 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# 二分类损失函数",
+   "source": [
+    "# 二分类损失函数"
+   ],
    "id": "d0ec0162b7294d"
   },
   {
@@ -179,7 +185,9 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# nn.Sequential管道和手动控制计算的区别",
+   "source": [
+    "# nn.Sequential管道和手动控制计算的区别"
+   ],
    "id": "e31becddf3355f6b"
   },
   {
@@ -235,7 +243,9 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# nn.Sequential容器和nn.ModuleList、nn.ModuleDict的区别",
+   "source": [
+    "# nn.Sequential容器和nn.ModuleList、nn.ModuleDict的区别"
+   ],
    "id": "4134f140e3fa5c10"
   },
   {
@@ -243,13 +253,15 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [],
    "id": "37c8fa9cc78db189"
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# 模型参数的保存与读取",
+   "source": [
+    "# 模型参数的保存与读取"
+   ],
    "id": "bcc0d382f1af8b9a"
   },
   {
@@ -257,7 +269,9 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "# 见上一节末尾",
+   "source": [
+    "# 见上一节末尾"
+   ],
    "id": "f2ba9fe1636ba7a3"
   },
   {
@@ -265,7 +279,7 @@
    "cell_type": "markdown",
    "source": [
     "# 参数字典\n",
-    "<img src=\"./vis/parameter_dict_running_result.png\">"
+    "<img src=\"./notebook_image_dir/parameter_dict_running_result.png\">"
    ],
    "id": "2fcdd459582832b8"
   },
@@ -274,7 +288,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [],
    "id": "95ce5f32a04c1e5"
   }
  ],
